Update swagger api documentation
